[project]
name = "kele-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hao Zhang", email = "hzhangxyz@outlook.com" }
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
